<resources>
    <string name="app_name">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Style Omega Fashion</string>
    <string name="nav_header_subtitle">Style begin with us</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Contact">Contact Us</string>
    <string name="title_activity_abt_us">abtUS</string>
    <string name="title_activity_view_details_trouser">viewDetailsTrouser</string>
    <string name="title_activity_view_details__gents_shirt">viewDetails_GentsShirt</string>
    <string name="title_activity_view_details_kids">viewDetailsKids</string>
    <string name="title_activity_check_out">checkOut</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="security_word">Security word</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forget_passowrd">Forget Passowrd?</string>
    <string name="want_to_be_stylish">Want to be Stylish?</string>
</resources>
