<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/editText2"
        android:textColorHint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="62dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_editor_absoluteX="62dp" />

    <EditText
        android:id="@+id/editText5"
        android:textColorHint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:layout_editor_absoluteX="62dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/security_word"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        tools:layout_editor_absoluteX="69dp" />



    <TextView
        android:id="@+id/textView15"
        android:textColorHint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="72dp"
        android:text="Register"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="182dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="Addvalues"
        android:text="Register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        tools:layout_editor_absoluteX="161dp" />
</android.support.constraint.ConstraintLayout>